--- a/docs/locale/zh_CN/LC_MESSAGES/index.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/index.po
@@ -1,25 +1,25 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) 2021, boliqq07
 # This file is distributed under the same license as the featurebox package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
+#
 # Translators:
 # changxin W <986798607@qq.com>, 2021
-# 
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: featurebox\n"
+"Project-Id-Version:  featurebox\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-06 13:49+0800\n"
+"POT-Creation-Date: 2021-08-06 21:49+0800\n"
 "PO-Revision-Date: 2021-08-06 06:14+0000\n"
 "Last-Translator: changxin W <986798607@qq.com>, 2021\n"
-"Language-Team: Chinese (https://www.transifex.com/ustb/teams/123473/zh/)\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Language: zh\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Language-Team: Chinese (https://www.transifex.com/ustb/teams/123473/zh/)\n"
+"Plural-Forms: nplurals=1; plural=0\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Generated-By: Babel 2.9.0\n"
 
 #: ../../index.rst:4
 msgid "Contents:"
@@ -29,43 +29,50 @@ msgstr "内容："
 msgid "Welcome to featurebox's documentation!"
 msgstr "欢迎使用featurebox文档。"
 
-#: ../../index.rst:18
+#: ../../index.rst:17
 msgid ""
-"Featurebox is a open Python library that implements a comprehensive set of "
-"machine learning tools for materials informatics, and aims to generate "
-"material features quickly and easily."
-msgstr "Featurebox是一个开放的python库，"
-"集成了一套全面的材料信息学机器学习工具，"
-"旨在快速和轻松地生成、筛选、使用材料特征。"
+"Featurebox is a open Python library that implements a comprehensive set "
+"of machine learning tools for materials informatics, and aims to generate"
+" material features quickly and easily."
+msgstr "Featurebox是一个开放的python库，集成了一套全面的材料信息学机器学习工具，旨在快速和轻松地生成、筛选、使用材料特征。"
 
-#: ../../index.rst:22
+#: ../../index.rst:21
 msgid "Features:"
 msgstr "特色："
 
-#: ../../index.rst:24
+#: ../../index.rst:23
 msgid "Large batch features production."
 msgstr "大批量产生特征。"
 
-#: ../../index.rst:26
+#: ../../index.rst:25
 msgid "Selection tools with feature binding and restriction."
 msgstr "带有特性绑定功能的特征选择算法。"
 
-#: ../../index.rst:31
+#: ../../index.rst:30
 msgid "Links"
 msgstr "链接"
 
-#: ../../index.rst:33
-msgid "`Featurebox source code <https://github.com/boliqq07/featurebox>`_"
-msgstr "`Github <https://github.com/boliqq07/featurebox>`_"
-
-#: ../../index.rst:36
+#: ../../index.rst:32
+msgid ""
+"`Featurebox source code <https://github.com/boliqq07/featurebox>`_ "
+"`English Version <https://featurebox.readthedocs.io/en/latest/>`_ "
+"`Chinese Version <https://featurebox.readthedocs.io/zh_CN/latest/>`_"
+msgstr ""
+"`Github <https://github.com/boliqq07/featurebox>`_ "
+"`英文版 <https://featurebox.readthedocs.io/en/latest/>`_ "
+"`中文版 <https://featurebox.readthedocs.io/zh_CN/latest/>`_"
+#: ../../index.rst:37
 msgid "Index"
 msgstr "目录"
 
-#: ../../index.rst:38
+#: ../../index.rst:39
 msgid ":ref:`genindex`"
 msgstr ":ref:`genindex`"
 
-#: ../../index.rst:39
+#: ../../index.rst:40
 msgid ":ref:`modindex`"
 msgstr ":ref:`modindex`"
+
+#~ msgid "`Featurebox source code <https://github.com/boliqq07/featurebox>`_"
+#~ msgstr "`Github <https://github.com/boliqq07/featurebox>`_"
+
