--- a/docs/locale/zh_CN/LC_MESSAGES/Examples/sample_fea0.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/Examples/sample_fea0.po
@@ -26,23 +26,23 @@ msgid ""
 "If you don't have a preference for features or idea, just try "
 "BatchFeature, we using features from pymatgen."
 msgstr "如果你对目前的问题没有特殊想法或迷茫，那就试一试"
-"BatchFeature，它使用pymatgen中的特征。"
+"BatchFeature，它使用pymatgen中的特征。我们可以使用三种输入方式： 1.结构数据；2.化合物成分；3.元素列表。"
 
 #: ../../Examples/sample_fea0.rst:7
 msgid "1.Transform structure list."
-msgstr "转换结构数据"
+msgstr "1.转换结构数据"
 
 #: ../../Examples/sample_fea0.rst:13
 msgid "``structures_list`` is list of ``struceture`` of ``pymatgen``."
-msgstr "structures_list是 ``pymatgen.Structure`` 的列表。"
+msgstr "structures_list 是 ``pymatgen.Structure`` 的列表。"
 
 #: ../../Examples/sample_fea0.rst:17
 msgid "2.Transform composition list."
-msgstr "转换化合物列表"
+msgstr "2.转换化合物列表"
 
 #: ../../Examples/sample_fea0.rst:27
 msgid "3.Transform element list."
-msgstr "转换元素列表"
+msgstr "3.转换元素列表"
 
 #: ../../Examples/sample_fea0.rst:37
 msgid "Note ::"
