--- a/docs/locale/zh_CN/LC_MESSAGES/Examples/sample_fea2.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/Examples/sample_fea2.po
@@ -66,7 +66,7 @@ msgstr ""
 
 #: ../../Examples/sample_fea2.rst:16
 msgid "Then run the code. ::"
-msgstr "然后运行代码。::"
+msgstr "然后运行代码："
 
 #: ../../Examples/sample_fea2.rst:26
 msgid ""
