--- a/docs/locale/zh_CN/LC_MESSAGES/Guide/data_type.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/Guide/data_type.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: featurebox \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-08 13:27+0800\n"
+"POT-Creation-Date: 2021-11-24 10:33+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -100,7 +100,7 @@ msgstr "你的输入数据。类型可以是元素序号或元素名。"
 msgid ""
 "(or pymatgen ``Structure``, we have built-in conversion functions of "
 "``Structure``, to directly get all the atomic information in compound)."
-msgstr "(或pymatgen 的``Structure``，我们有内置了转换函数转换 ``Structure``，来直接得到化合物中的所有原子信息)。"
+msgstr "(或pymatgen 的 ``Structure``，我们有内置了转换函数转换 ``Structure``，来直接得到化合物中的所有原子信息)。"
 
 #: ../../Guide/data_type.rst:60
 msgid "The element periodic table data (optional)."
@@ -110,27 +110,34 @@ msgstr "元素周期表数据(可选)。"
 msgid ""
 "We have built-in some element periodic table (\"element_table.csv\", "
 "\"ie.json\", \"oe.csv\"), To customize your element periodic table. you "
-"can offer (``.json``,``.csv``) file or any python data "
-"(``dict``,``pandas.DataFrame``,``numpy.ndarray``) in code."
+"can offer (``.json``, ``.csv``) file or any python data (``dict``, "
+"``pandas.DataFrame``, ``numpy.ndarray``) in code."
 msgstr ""
-"我们内置了一些元素周期表(\"element_table.csv\"， \"ie.json\", "
-"\"oe.csv\")，若需要自定义元素周期表。你可以提供 (``.json``,``.csv``) "
-"文件或python数据类型(``dict``,``pandas.DataFrame``,``numpy.ndarray``)."
+"我们内置了一些元素周期表(\"element_table.csv\", \"ie.json\", "
+"\"oe.csv\")，若需要自定义元素周期表。你可以提供 (``.json``, ``.csv``) "
+"文件或python数据类型(``dict``, ``pandas.DataFrame``, ``numpy.ndarray``)."
 
 #: ../../Guide/data_type.rst:55
-msgid "where (``.json``,``dict``) by :class:`featurebox.featurizers.atom.mapper.AtomJsonMap`,"
+msgid ""
+"where (``.json``, ``dict``) by "
+":class:`featurebox.featurizers.atom.mapper.AtomJsonMap`,"
 msgstr ""
-" (``.json``,``dict``) 使用  "
+" (``.json``, ``dict``) 使用  "
 ":class:`featurebox.featurizers.atom.mapper.AtomJsonMap` , "
 
 #: ../../Guide/data_type.rst:57
-msgid "(``.csv``,``pandas.DataFrame``,``numpy.ndarray``) by :class:`featurebox.featurizers.atom.mapper.AtomTableMap`."
+msgid ""
+"(``.csv``, ``pandas.DataFrame``, ``numpy.ndarray``) by "
+":class:`featurebox.featurizers.atom.mapper.AtomTableMap`."
 msgstr ""
-" (``.csv``,``pandas.DataFrame``,``numpy.ndarray``) 使用  "
+" (``.csv``, ``pandas.DataFrame``, ``numpy.ndarray``) 使用  "
 ":class:`featurebox.featurizers.atom.mapper.AtomTableMap` ."
 
 #: ../../Guide/data_type.rst:59
-msgid "And one specialized :class:`featurebox.featurizers.atom.mapper.AtomPymatgenPropMap` for fetch data from ``pymatgen.core.periodic_table.json``."
+msgid ""
+"And one specialized "
+":class:`featurebox.featurizers.atom.mapper.AtomPymatgenPropMap` for fetch"
+" data from ``pymatgen.core.periodic_table.json``."
 msgstr ""
 "并且我们提供了一个特殊的  "
 ":class:`featurebox.featurizers.atom.mapper.AtomPymatgenPropMap` 来调用 "
@@ -152,12 +159,12 @@ msgstr "2. 键特征"
 msgid ""
 "2. For bond features, use the structure data to extract information. The "
 "common structure data include the ``Structure`` of ``Pymatgen``, the "
-"``Atoms`` of ``ase``, etc. The ``Structure`` and ``Atoms`` could mutual "
+"``Atoms`` of ``ase`` , etc. The ``Structure`` and ``Atoms`` could mutual "
 "transform by ``pymatgen.io.ase.AseAtomsAdaptor``."
 msgstr ""
-"对于键合特征，需要使用结构数据提取信息。常见的结构数据包括 ``Pymatgen`` 的 ``Structure`` ， "
-"``ase``的``Atoms``等等。``Structure`` 与 ``Atoms`` 可以用  "
-"``pymatgen.io.ase.AseAtomsAdaptor``相互转换。"
+"对于键合特征，需要使用结构数据提取信息。常见的结构数据包括 ``Pymatgen`` 的 ``Structure`` ， ``ase`` 的 "
+"``Atoms`` 等等。 ``Structure`` 与 ``Atoms`` 可以用  "
+" ``pymatgen.io.ase.AseAtomsAdaptor`` 相互转换。"
 
 #: ../../Guide/data_type.rst:92
 msgid ""
@@ -178,10 +185,8 @@ msgid "There are two method to get State (overall compound) features."
 msgstr "两种方式获取状态(化合物整体)特征"
 
 #: ../../Guide/data_type.rst:102
-msgid ""
-"**Information extraction from structure data (``Structure`` of "
-"``Pymatgen``).**"
-msgstr "**3.1 从结构数据中提取信息，( ``Pymatgen`` 的 ``Structure``)**"
+msgid "**Information extraction from structure data.**"
+msgstr "**3.1 从结构数据中提取信息。**"
 
 #: ../../Guide/data_type.rst:104
 msgid ""
@@ -216,13 +221,12 @@ msgstr "直接获取状态特性。"
 
 #: ../../Guide/data_type.rst:140
 msgid ""
-"More combination operation "
-"``WeightedSum``,``GeometricMean``,``HarmonicMean``,``WeightedVariance`` "
-"and so on can be found in :mod:`featurebox.featurizers.state.statistics`."
+"More combination operation ``WeightedSum``, ``GeometricMean``, "
+"``HarmonicMean``, ``WeightedVariance`` and so on can be found in "
+":mod:`featurebox.featurizers.state.statistics` ."
 msgstr ""
-"更多的组合操作，如 "
-"``WeightedSum``,``GeometricMean``,``HarmonicMean``,``WeightedVariance`` "
-"参考： :mod:`featurebox.featurizers.state.statistics`."
+"更多的组合操作，如 ``WeightedSum``, ``GeometricMean``, ``HarmonicMean``, "
+"``WeightedVariance`` 参考： :mod:`featurebox.featurizers.state.statistics`."
 
 #: ../../Guide/data_type.rst:143
 msgid "More: :doc:`../Examples/sample_fea3`"
