--- a/docs/locale/zh_CN/LC_MESSAGES/Guide/data_type.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/Guide/data_type.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: featurebox \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-01-05 00:41+0800\n"
+"POT-Creation-Date: 2022-03-06 20:14+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -26,8 +26,8 @@ msgid ""
 "Before reading this part, make sure the you have already known "
 "``Structure`` :doc:`background` ."
 msgstr ""
-"在阅读本节之前，请确保你对 ``pymatgen.core.Structure`` 已经有了一定的了解并下载测试数据 "
-"``Structure`` :doc:`background` 。"
+"在阅读本节之前，请确保你对 ``pymatgen.core.Structure`` 已经有了一定的了解并下载测试数据 ``Structure`` "
+":doc:`background` 。"
 
 #: ../../Guide/data_type.rst:9
 msgid "Definition"
@@ -196,8 +196,9 @@ msgid ""
 msgstr "**3.1 从结构数据中提取信息。**"
 
 #: ../../Guide/data_type.rst:114
+#, fuzzy
 msgid ""
-"For the ``Atoms`` of ``ase``, The ``Structure`` could transformed by "
+"For the ``Atoms`` of ``ase`` , The ``Structure`` could transformed by "
 "``pymatgen.io.ase.AseAtomsAdaptor``."
 msgstr ""
 "对于 ``ase`` 的 ``Atoms`` 来说，``Structure`` 可以通过 "
