--- a/docs/locale/zh_CN/LC_MESSAGES/Guide/background.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/Guide/background.po
@@ -80,8 +80,10 @@ msgid ""
 " code, thus we could accept ``structure_1`` , ``structure_list`` "
 "directly."
 msgstr ""
-"本库中，我们接受形如 ``name_dict_data`` , ``number_data``  的数据作为输入, 同时，由于上述转换已经被内置,"
-" 我们可以也直接输入 ``structure_1`` , ``structure_list`` 。"
+"本库中，我们接受形如 ``name_dict_data`` , ``number_data``  的数据作为输入, "
+"同时，由于上述转换已经被内置,"
+" 我们可以也直接把 ``structure_1`` , ``structure_list`` "
+"直接作为输入。"
 
 #: ../../Guide/background.rst:45
 msgid ""
@@ -95,5 +97,6 @@ msgstr ""
 msgid ""
 "Of course, The data ``name_dict_data`` , ``number_data`` could build by "
 "yourself from you code."
-msgstr "当然 ``name_dict_data`` , ``number_data`` 可以自己生成，无论何种来源，只要格式对应均可。"
+msgstr "当然 ``name_dict_data`` , ``number_data`` 可以自己生成，无论何种来源，"
+"只要格式对应均可。"
 
