--- a/docs/locale/zh_CN/LC_MESSAGES/Examples/sample_fea7.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/Examples/sample_fea7.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: featurebox \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-01-04 23:10+0800\n"
+"POT-Creation-Date: 2022-05-08 11:09+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -23,9 +23,9 @@ msgstr "使用自己的数据"
 
 #: ../../Examples/sample_fea7.rst:11
 msgid ""
-"where the search_tp is \"number\" or \"name_dict\" depend on your data, "
-"but advise use \"name_dict\" for json data."
+"where the search_tp is \"number\" or \"name\" depend on your data, but "
+"advise use \"name\" for json data."
 msgstr ""
-"``search_tp`` 是 \"number\" 或者 \"name_dict\" ，决定于你自己的数据."
-"但是建议使用 \"name_dict\" 。"
+"``search_tp`` 是 \"number\" 或者 \"name_dict\" ，决定于你自己的数据.但是"
+"建议使用  \"name_dict\" 。"
 
